refactor cart-service operations
